Set theme jekyll-theme-midnight

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
 title: Le Quiz Numérique!
 description: Un quiz sans prétention qui vous apprendra plein de choses à l'utilité douteuse!
+
+theme: jekyll-theme-midnight
